# sorting-algorithms-STM32

./: README.md
STM32 Visualisation/: .cproject  .mxproject  .project  README.md  SortingVisualisation.ioc  displaytest Debug.launch
STM32 Visualisation/Core/Src/: main.c  spi_ili9341.c  spi_ili9341.h  stm32f4xx_hal_msp.c
STM32 Visualisation/Debug/: displaytest.elf  displaytest.list  displaytest.map  makefile  objects.list
STM32 Visualisation/Debug/Core/Src/: main.d  main.su  spi_ili9341.d  spi_ili9341.su  subdir.mk
Software Benchmark/: CMakeLists.txt  README.md  benchmark_settings.txt  plots.py
Software Benchmark/libs/: benchmark.c  single_array.c  sort.c
